# wearabout

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  config.py
app/engines/: __init__.py  recommendation.py
app/middleware/: __init__.py  auth.py  metrics.py
app/pipeline/: __init__.py  data_loader.py  evaluator.py  inference.py  trainer.py
app/routes/: auth.py  detection.py  features.py  health.py  recommendation.py  validation.py
app/schemas/: __init__.py  auth.py
app/utils/: __init__.py  logger.py  mlflow_client.py  validators.py
frontend/: package-lock.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: GenderFilter.jsx  ModeToggle.jsx  PreviewImage.jsx  ProductCard.jsx  UploadZone.jsx
scripts/: build_catalog.py  collect_not_fashion.py  evaluate.py  merge_dataset.py  retrain.py  train_classifier.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_feature_extraction.py  test_recommendation.py
